--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "better-react-carousel": "^1.1.1",
+    "framer-motion": "^6.5.1",
     "npm-check-updates": "^15.3.4",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
